# COR-Lab_local

./: .dockerignore  .gitignore  Dockerfile  README.md  corid_env.development  docker-compose.yml  entrypoint.sh  grafana.ini.dev  grafana.ini.prod  log_config.yaml  loki-config.yaml  main.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 193d77326562_first_migration_v0_0_1.py
cor_lab/: schemas.py
cor_lab/config/: config.py
cor_lab/database/: db.py  models.py  redis_db.py
cor_lab/repository/: case.py  cassette.py  cor_id.py  doctor.py  glass.py  lab_assistant.py  lawyer.py  password_generator.py  patient.py  person.py  printing_device.py  records.py  sample.py  user_session.py
cor_lab/routes/: admin.py  auth.py  cases.py  cassettes.py  cor_id.py  dicom_router.py  doctor.py  glasses.py  lab_assistants.py  lawyer.py  person.py  printer.py  printing_device.py  records.py  samples.py  svs_router.py  websocket_events.py
cor_lab/services/: access.py  auth.py  cipher.py  device_info.py  document_validation.py  email.py  glass_and_cassette_printing.py  image_validation.py  logger.py  recovery_file.py  redis_service.py  roles.py  search_token_generator.py  websocket.py  websocket_events_manager.py
cor_lab/static/: conclusion.html  direction.html  doctor_patients_page.html  doctor_registration.html  exploration.html  glass.html  lab.html  medical.html  modbus.html  tenderloin.html
cor_lab/templates/: email_templates.html  forgot_password_email_template.html  recovery_code.html  (+1 more)
devops/: find_volumes.sh
(+53 files in other folders)
